--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -5,6 +5,8 @@
 .singlePostWrapper {
     padding: 20px;
     padding-right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .singlePost img {
@@ -19,6 +21,19 @@
     margin: 10px;
     font-family: 'Lora', serif;
     font-size: 28px;
+}
+
+.singlePostTitleInput {
+    margin: 10px;
+    font-family: 'Lora', serif;
+    font-size: 28px;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.singlePostTitleInput:focus {
+    outline: none;
+    box-shadow: 0 2px 0 0 rgb(26, 26, 253);
 }
 
 .singlePostEdit {
@@ -54,8 +69,33 @@
     line-height: 25px;
 }
 
+.singlePostDescInput {
+    margin: 10px;
+    font-family: 'Lora', serif;
+    font-size: 28px;
+    border: none;
+    border-bottom: 1px solid #000;
+}
+
+.singlePostDescInput:focus {
+    outline: none;
+    box-shadow: 0 2px 0 0 rgb(26, 26, 253);
+}
+
 .singlePostDesc::first-letter {
     margin-left: 20px;
     font-size: 30px;
     font-weight: 600;
+}
+
+.singlePostButton {
+    width: 100px;
+    bottom: none;
+    background-color: teal;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-top: 20px;
 }
